Fix horizontal scrolling on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,7 @@
 body {
     background: cadetblue;
     width: 100%;
+    overflow-x:hidden;
 }
 
 .card-title {
